--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo": "~46.0.16",
     "expo-linear-gradient": "^11.4.0",
     "expo-status-bar": "~1.4.0",
+    "expo-system-ui": "^2.0.1",
     "react": "18.0.0",
     "react-native": "0.69.6",
     "react-native-anchor-point": "^1.0.6",
@@ -27,7 +28,8 @@
     "react-native-svg": "12.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "install-peers": "^1.0.4"
   },
   "private": true
 }
