--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo-linear-gradient": "^11.4.0",
     "expo-status-bar": "~1.4.0",
     "expo-system-ui": "^2.0.1",
+    "expo-updates": "~0.14.7",
     "react": "18.0.0",
     "react-native": "0.69.6",
     "react-native-anchor-point": "^1.0.6",
