--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "expo": "~46.0.16",
     "expo-linear-gradient": "^11.4.0",
     "expo-status-bar": "~1.4.0",
-    "expo-system-ui": "^2.0.1",
+    "expo-system-ui": "~1.3.0",
     "expo-updates": "~0.14.7",
     "react": "18.0.0",
     "react-native": "0.69.6",
     "react-native-anchor-point": "^1.0.6",
     "react-native-chart-kit": "^6.12.0",
     "react-native-dropdown-picker": "^5.4.3",
+    "react-native-maps": "0.31.1",
     "react-native-progress": "^5.0.0",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
