--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@miblanchard/react-native-slider": "^2.1.0",
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-masked-view/masked-view": "0.2.7",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
