--- a/package.json
+++ b/package.json
@@ -9,19 +9,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^18.0.1",
     "@miblanchard/react-native-slider": "^2.1.0",
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-masked-view/masked-view": "0.2.8",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
     "expo": "^48.0.0",
-    "expo-linear-gradient": "~12.1.1",
+    "expo-linear-gradient": "~12.1.2",
     "expo-localization": "~14.1.1",
     "expo-status-bar": "~1.4.4",
     "expo-system-ui": "~2.2.1",
-    "expo-updates": "~0.16.3",
+    "expo-updates": "~0.16.4",
     "react": "18.2.0",
-    "react-native": "0.71.3",
+    "react-dom": "^18.2.0",
+    "react-native": "0.71.14",
     "react-native-anchor-point": "^1.0.6",
     "react-native-chart-kit": "^6.12.0",
     "react-native-dropdown-picker": "^5.4.3",
@@ -29,7 +31,8 @@
     "react-native-progress": "^5.0.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-svg": "13.4.0"
+    "react-native-svg": "13.4.0",
+    "react-native-web": "^0.18.12"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
